--- a/src/css/media-qurey.css
+++ b/src/css/media-qurey.css
@@ -101,14 +101,15 @@
     margin-top: 1.3rem;
     grid-template-rows: 6% auto;
     gap: 1%;
+    margin-bottom: 2%;
   }
   /* ======================================================================== */
   div.slider-container header nav {
     position: fixed;
     top: auto;
     bottom: 0;
-    right: 5%;
-    width: 90%;
+    right: 0;
+    width: 100%;
     height: 5%;
     background: hsla(240, 1%, 17%, 0.75);
     backdrop-filter: blur(10px);
@@ -152,6 +153,12 @@
     gap: 1%;
     grid-template-rows: 19% 80%;
     margin: 0;
+  }
+  div.box div.srteam-box div.icon {
+    padding: 20%;
+  }
+  .stream-subTitle h3 {
+    margin-bottom: 2%;
   }
   /* ============= */
   main div.devlopent-stream > div.box {
@@ -213,8 +220,9 @@
     padding: 4%;
   }
   main div.education-info ul li::after {
-    left: -5.5%;
-    width: 4%;
+    left: -5.4%;
+    width: 3%;
+    height: auto;
   }
   main div.education-info ul li:first-child:before {
     width: 3px;
@@ -238,11 +246,11 @@
   div.slider-container#projects {
     height: 113rem;
     grid-template-rows: 3% auto;
-    gap: 0.5%;
+    gap: 2%;
   }
   div.slider-container#projects main#projects {
-    gap: 1%;
-    grid-template-rows: 3% 90%;
+    gap: 1.5%;
+    grid-template-rows: 1% 90%;
   }
   main#projects nav ul {
     width: 100%;
@@ -255,6 +263,21 @@
   }
   div.project-box {
     height: 20rem;
+  }
+  div.project-box::after {
+    bottom: 20%;
+    right: 27%;
+  }
+  div.project-box#soon::after {
+    bottom: 17.4%;
+    right: 35%;
+  }
+  div.project-box#working::after {
+    bottom: 18.5%;
+    right: 40%;
+  }
+  div.project-box:nth-child(4)#soon::after {
+    right: 13%;
   }
   /* ===================================================================== */
   /* ===================================================================== */
@@ -274,6 +297,11 @@
   form div.btn button {
     width: 100%;
     padding: 0 30%;
+  }
+  form label input::placeholder,
+  form label textarea::placeholder {
+    color: var(--light-gray-70);
+    font-size: 0.9rem;
   }
 }
 @media screen and (min-width: 900px) {
